fixed some nav bar spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,3 +28,7 @@ body {
 .fa-user-circle:before {
   padding-left: 21px;
 }
+
+.navbar {
+  padding-right: 1px;
+}
